tests/failing/1-recursion_param_error/main.rgo
foo: (x:()){
    x()
}
main: () {
    foo(foo)
}
